--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -164,24 +164,28 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	text-decoration:none;
 }
 /* ========== MAIN NAV ========== */
+/*.block-sitewide-top-menu .grid-4{
+	min-width:400px;
+	
+}*/
 
-.navigation, .navigation a, #main-menu {
+#mini-panel-sitewide_top_menu .menu a{
 	font-family:Arial, Helvetica, sans-serif;
-	font-size:1.083em;
-	padding-top:8px;
+	font-size:15px;
+	color:#454545;
+	margin-top:8px;
+	padding:6px 6px 7px 6px;
+	border: solid 1px transparent
+	
+}
+
+#mini-panel-sitewide_top_menu  .menu .active {
+	
+}
+#mini-panel-sitewide_top_menu  .menu a:hover {
 	color:#454545;
 }
-.main-menu .active {
-	text-decoration:underline;
-}
-.main-menu a:hover {
-	color:#454545;
-}
-.main-menu a {
-	margin:1px 1px 0 1px;
-	padding:3px 6px 8px;
-}
-.main-menu a.qtip-hover{
+#mini-panel-sitewide_top_menu .menu a.qtip-hover{
 	-webkit-border-top-right-radius:3px;
 	-webkit-border-top-left-radius: 3px;
 	-moz-border-radius-topleft: 3px;
@@ -190,12 +194,15 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	border-top-right-radius: 3px;
 	border:1px solid #dddedf;
 	border-bottom:none;
-	margin:0;
+	margin:0px;
+	padding-bottom:9px;
 	background:#fff;
+	color:#454545;
 }
-ul.main-menu li {
+#mini-panel-sitewide_top_menu ul.menu li {
 	padding:0;
-	float: left;
+	float:left;
+	list-style:none;
 }
 
 /* ========== MAIN NAV DROPDOWN ========== */
@@ -251,25 +258,23 @@ ul.main-menu li {
 	list-style:none;
 	padding:10px 40px 0 0;
 }
-#megamenu-athletics{
-	margin-right:20px;
-}
-#megamenu-apply,
-#megamenu-visit {
+
+#mini-panel-sitewide_top_menu #apply,
+#mini-panel-sitewide_top_menu #visit {
 	color:#ffffff;
 	position: relative;
 	text-align: left;
 	text-decoration: none;
 	background:transparent url("../images/apply-visit.png") 0 50%;
-	padding: 9px 20px 7px 25px;
+	padding: 9px 20px 7px 30px;
 	border:none;
 	margin:0 0 0 -14px;
 	z-index: 99;
 }
-#megamenu-apply:hover,
-#megamenu-visit:hover,
-#megamenu-apply.qtip-hover,
-#megamenu-visit.qtip-hover  {
+#mini-panel-sitewide_top_menu #apply:hover,
+#mini-panel-sitewide_top_menu  #visit:hover,
+#mini-panel-sitewide_top_menu  #apply.qtip-hover,
+#mini-panel-sitewide_top_menu  #visit.qtip-hover  {
 	background-position: -200px 50%;
 	background-color:transparent;
 	margin:0 0 0 -14px;
@@ -278,8 +283,8 @@ ul.main-menu li {
 	color:#000;
 }
 
-.last #megamenu-apply,
-.last #megamenu-visit {
+.last #mini-panel-sitewide_top_menu  #apply,
+.last #mini-panel-sitewide_top_menu  #visit {
 	/* Because I wasnt sure which one would be last, this allows them to be switched */
 	z-index: 100;
 }
