--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -171,7 +171,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:15px;
 	color:#454545;
-	padding:6px 4px 0px 4px;
+	padding:6px 4px 8px 4px;
 	border: solid 1px transparent;
 }
 
@@ -193,6 +193,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 #mini-panel-sitewide_top_menu ul.menu li {
 	padding:0;
+	padding-bottom:8px;
 	float:left;
 	list-style:none;
 }
@@ -204,7 +205,6 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	border-right:#dddedf solid 1px;
 	border-left:#dddedf solid 1px;
 	margin:0;
-
 }
 .qtip a {
 		text-decoration:underline;
