--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -403,12 +403,11 @@ li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open u
 	padding:0;
 	margin:0;
 	position: relative;
-	
--webkit-box-shadow:0px 14px 32px -5px #333333;
--moz-box-shadow:0px 14px 32px -5px #333333;
--o-box-shadow:0px 14px 32px -5px #333333;
--ms-box-shadow:0px 14px 32px -5px #333333;
-box-shadow:0px 14px 32px -5px #333333;
+	-webkit-box-shadow:0px 14px 32px -5px #a0a0a0;
+	-moz-box-shadow:0px 14px 32px -5px #a0a0a0;
+	-o-box-shadow:0px 14px 32px -5px #a0a0a0;
+	-ms-box-shadow:0px 14px 32px -5px #a0a0a0;
+	box-shadow:0px 14px 32px -5px #a0a0a0;
 }
 .region-content .region-plain-box-lc-rounded-region .rounded-shadow-background,
 .region-content .pane-plain-box-lc-rounded-pane .pane-content {
@@ -483,11 +482,6 @@ box-shadow:0px 14px 32px -5px #333333;
 	border-top-right-radius: 6px;
 	border-bottom:none;
 	background:#fff;
-	-webkit-box-shadow:0px -23px 48px -23px #000000;
--moz-box-shadow:0px -23px 48px -23px #000000;
--o-box-shadow:0px -23px 48px -23px #000000;
--ms-box-shadow:0px -23px 48px -23px #000000;
-box-shadow:0px -23px 48px -23px #000000;
 }
 .region-content .quicktabs-tabs li:hover a,
 .region-content .quicktabs-tabs li.active a{
