--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -220,24 +220,14 @@ body.front {
 	padding: 0;
 	height: 180px;
 	overflow: hidden;
-	/*border: 1px solid #CCC;*/
 	list-style: none;
 	background: #fff none;
 }
 
 .jcarousel-skin-default .jcarousel-item-horizontal {
 	margin: 0 4px 0px 4px;
-	
 }
-
-.jcarousel-skin-default .jcarousel-item-placeholder {
-	background: #fff url("../images/home/testImage.jpg") no-repeat center center;
-	color: #000;
-}
-
-/**
- * Buttons
- */
+/* Buttons*/
 .jcarousel-skin-default .jcarousel-next,
 .jcarousel-skin-default .jcarousel-prev {
 	display: block;
@@ -251,9 +241,7 @@ body.front {
 	display: none;
 }
 
-/**
- * Horizontal Buttons
- */
+/*Horizontal Buttons */
 .jcarousel-skin-default .jcarousel-prev-horizontal {
 	position: absolute;
 	top: 90px;
@@ -284,13 +272,10 @@ body.front {
 
 
 
-/**
- * Content Items
- */
+/* Content Items */
 
 .jcarousel li, .views-field-field-image {
 	width:260px;
-	z-index:2;
 }
 
 .jcarousel .views-field-field-image {
@@ -298,16 +283,16 @@ body.front {
 }
 
 .jcarousel .views-field-field-image:hover {
-	margin-bottom:-90px;
+	margin-bottom:-96px;
 }
 
 .jcarousel .views-field-body {
-	margin-top:10px;
+	position:relative;
+	margin-bottom:10px;
+	padding:10px 10px 20px 10px;
 	width:260px;
-	padding:10px;
-	background: url(../images/home/alpha-gray.png);
+	background:transparent url(../images/home/alpha-gray.png);
 	color:#c6c6c6;
-	z-index:1;
 }
 
 .jcarousel .views-field-view-node { display:none; }
