--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1092,9 +1092,9 @@ footer#section-footer li a:hover {
 
 .footer-image {
 	margin:30px;
-	height:282px;
-	width:425px;
-	border:5px solid #e8e8e8;
+	height:248px;
+	width:400px;
+	border:2px solid #bdbdbd;
 	-moz-border-radius:8px;
 	-webkit-border-radius:8px;
 	border-radius:8px;
