--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1094,13 +1094,14 @@ footer#section-footer li a:hover {
 	margin:30px;
 	height:248px;
 	width:400px;
-	border:2px solid #bdbdbd;
-	-moz-border-radius:8px;
+	border:2px solid #5b5b5b;
+/*	-moz-border-radius:8px;
 	-webkit-border-radius:8px;
 	border-radius:8px;
 	border-collapse:inherit;
 	-moz-box-shadow:0 1px 3px #000;
 	-webkit-box-shadow:0 1px 3px #000;
+*/
 	box-shadow:0 1px 3px #000;
 }
 
