--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -1,81 +1,21 @@
 /* This file will hold styles that are loaded using the same media query as the narrow grid. */
-
-
-/*****************/
-/* header region */
-/*****************/
-
-/* this should be unnecessary when we are done. */
-.region-user-first-inner {
-	display:none;
-}
-
-.region-user-second {
-	height:30px;
-}
-
-#section-content {
-	clear:both;
-}*/
-
-/****************
-* specific body styles *
-*****************/
-
-.news-page-thumbnail-image {
-	float:left;
-	margin-right:10px;
-	margin-bottom:5px;
-	/*border:solid 1px #000;*/
-}
-.view-news-stories-by-date .view-content .views-row {
-	margin-bottom:20px;
-}
-#campus-life-left {
-	height:250px;
-	width:inherit;
-}
-#student-activities-left {
-	height:500px;
-	width:inherit;
-	color:inherit;
-}
-
-.view-lc-events .view-content .views-row {
-	margin-bottom:15px;
-}
-
-#tour-flickr {
-	width: 500px;
-	height: 399px;
-	border:3px solid #666;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
-	border-collapse:inherit;
-	-moz-box-shadow:0 1px 3px #000;
-	-webkit-box-shadow:0 1px 3px #000;
-	box-shadow:0 1px 3px #000;
-}
-#tour-left { float:left; margin-right:30px; margin-bottom:30px; }
-#tour-middle { float:left; margin-right:30px; }
-#tour-right {}
-
-/*****************/
-/* footer region */
-/*****************/
-
-#region-footer-first, #region-footer-first div.content {
-height:60px;
-}
-
-
-#region-footer-second {
-	clear:both;
-}
-
 /*moved over from normal.css*/
 /* This file will hold styles that are loaded using the same media query as the normal grid. */
+
+/******************************
+1. HOMEPAGE HEADER
+2. TABS AND HOMEPAGE SPECIFIC CONTENT STYLES
+3. JCarousel "What's Happening" Rotator 
+4. SPECIFIC BODY STYLES
+5. FOOTER REGION
+6. MISC
+ ******************************/
+
+
+
+/******************************
+        HOMEPAGE HEADER   
+ ******************************/
 
 body {
 	background: #f9f9f9 url(../images/bg-body-top3.jpg) repeat-x top left;
@@ -88,7 +28,6 @@ body {
 	background: transparent url(../images/bg-header-arch.jpg) no-repeat top center;
 	filter:none;
 }
-
 .region-user-second-inner {
 	padding: 20px 0 0 10px;
 }
@@ -96,22 +35,18 @@ body {
 .zone-branding {
 	height: 47px;
 }
-
 .zone-menu-wrapper {
 	background:none;
 	filter:none;
 	padding: 0;
 }
-
-
-h2.pane-title {
-	font-size:20px;
-	line-height:24px;
+.region-user-second {
+	height:30px;
 }
 
-/******************************
- *  HOMEPAGE HEADER           *
- ******************************/
+#section-content {
+	clear:both;
+}
 
 body.front {
 	background:#f9f9f9 url(../images/home/bg-stripe-home1.jpg) repeat-x top left;
@@ -130,7 +65,7 @@ body.front {
  }
 
 .front .zone-content-wrapper {
-	background:#f9f9f9 url("../images/home/bg3-home.jpg") no-repeat bottom center;
+	background:#f9f9f9 url(../images/home/bg3-home.jpg) no-repeat bottom center;
 	margin-top:-8px;
 }
 
@@ -146,7 +81,6 @@ body.front {
 	padding:20px;
 	margin:0;
 }
-
 /** Quicktab customizations for normal view ***/
 /*#quicktabs-undergraduate_admission_tabs .item-list ul {
 	width:380px;
@@ -175,21 +109,18 @@ body.front {
 	margin:0 15px;
 }
 
-/****************************************/
-/* JCarousel "What's Happening" Rotator */
 
-
-/**
- * original CSS and icons by Nathan Haug, included with JCarousel plugin
- * modified by KMB
- */
+/**********************************************
+    JCarousel "What's Happening" Rotator 
+ **********************************************/
+/* original CSS and icons by Nathan Haug, included with JCarousel plugin
+ * modified by KMB */
 
 .pane-jcarousel-article-rotation {
 	height:190px;
 	overflow:hidden;
 	padding-bottom:30px;
 }
-
 .jcarousel-skin-default {
 	text-align: left;
 	background: #ffffff; /* Old browsers */
@@ -201,7 +132,6 @@ body.front {
 	background: linear-gradient(top,  #ffffff 0%,#edeef2 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeef2',GradientType=0 ); /* IE6-9 */
 }
-
 .jcarousel-skin-default .jcarousel-container-horizontal {
 	width: 850px;
 	height: 190px;
@@ -209,12 +139,10 @@ body.front {
 	margin: auto;
 	overflow:hidden;
 }
-
 .jcarousel-skin-default .jcarousel-clip-horizontal {
 	width: 850px;
 	overflow: hidden;
 }
-
 .jcarousel-skin-default .jcarousel-item {
 	padding: 0;
 	height: 180px;
@@ -222,10 +150,10 @@ body.front {
 	list-style: none;
 	background: #fff none;
 }
-
 .jcarousel-skin-default .jcarousel-item-horizontal {
 	margin: 0 4px 0px 4px;
 }
+
 /* Buttons*/
 .jcarousel-skin-default .jcarousel-next,
 .jcarousel-skin-default .jcarousel-prev {
@@ -234,7 +162,6 @@ body.front {
 	height: 33px;
 	background-image: url("../images/home/arrows.png");
 }
-
 .jcarousel-skin-default .jcarousel-next-disabled,
 .jcarousel-skin-default .jcarousel-prev-disabled {
 	display: none;
@@ -254,7 +181,6 @@ body.front {
 .jcarousel-skin-default .jcarousel-prev-horizontal:active {
 	background-position: -64px 0;
 }
-
 .jcarousel-skin-default .jcarousel-next-horizontal {
 	position: absolute;
 	top: 90px;
@@ -269,22 +195,16 @@ body.front {
 	background-position: -64px -32px;
 }
 
-
-
 /* Content Items */
-
 .jcarousel li, .views-field-field-image {
 	width:260px;
 }
-
 .jcarousel .views-field-field-image {
 	border:none;
 }
-
 .jcarousel .views-field-field-image:hover {
 	margin-bottom:-96px;
 }
-
 .jcarousel .views-field-body {
 	position:relative;
 	margin-bottom:10px;
@@ -298,6 +218,68 @@ body.front {
 	-ms-transition:all 1.0s ease-in-out;	
 	transition:all 1.0s ease-in-out;*/
 }
-
 .jcarousel .views-field-view-node { display:none; }
 
+
+
+
+
+/****************************
+    SPECIFIC BODY STYLES
+*****************************/
+
+.news-page-thumbnail-image {
+	float:left;
+	margin-right:10px;
+	margin-bottom:5px;
+}
+.view-news-stories-by-date .view-content .views-row {
+	margin-bottom:20px;
+}
+#campus-life-left {
+	height:250px;
+	width:inherit;
+}
+#student-activities-left {
+	height:500px;
+	width:inherit;
+	color:inherit;
+}
+.view-lc-events .view-content .views-row {
+	margin-bottom:15px;
+}
+
+
+
+/******************************
+        FOOTER REGION   
+ ******************************/
+#region-footer-first, #region-footer-first div.content {
+	height:60px;
+}
+#region-footer-second {
+	clear:both;
+}
+#tour-flickr {
+	width: 500px;
+	height: 399px;
+	border:3px solid #666;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	border-collapse:inherit;
+	-moz-box-shadow:0 1px 3px #000;
+	-webkit-box-shadow:0 1px 3px #000;
+	box-shadow:0 1px 3px #000;
+}
+#tour-left { float:left; margin-right:30px; margin-bottom:30px; }
+#tour-middle { float:left; margin-right:30px; }
+#tour-right {}
+
+/******************************
+        MISC STYLES   
+ ******************************/
+h2.pane-title {
+	font-size:20px;
+	line-height:24px;
+}
