--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -75,7 +75,7 @@ table {
 	line-height:20px;
 }
 /* ========== IMAGE & BORDERS ========== */
-.image, .imageTopLeft, .imageTopRight, .imageLeft, .imageRight, .imageCenter {
+.image, .imageTopLeft, .imageTopRight, .imageLeft, .imageRight, .imageCenter, .field-name-field-headshot .img {
 	padding:3px;
 	background:#fff;
 	-moz-box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8"), -1px -1px 3px rgba(230, 230, 230, 0.8");
