--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -87,7 +87,7 @@ table {
 	position:relative;
 	behavior: url("js/PIE.htc");
 }
-.image:hover, .imageTopLeft:hover, .imageTopRight:hover, .imageLeft:hover, .imageRight:hover, .imageCenter:hover {
+.image:hover, .imageTopLeft:hover, .imageTopRight:hover, .imageLeft:hover, .imageRight:hover, .imageCenter:hover, .field-name-field-headshot img {
 	background:#e0e1e0;
 	-moz-transition: all 0.2s linear 0s;
 	-webkit-transition: all 0.2s linear 0s;
@@ -109,7 +109,7 @@ table {
 	float:right;
 	margin:20px 0 20px 20px;
 }
-.imageCenter {
+.imageCenter, .field-name-field-headshot img {
 	display: block;
 	margin: 20px auto 20px;
 }
